# task-scheduler

./: .clinerules  .gitignore  CLAUDE.md  README.md  activate_environment.bat  add.bat  code_analysis_rules.json  compile_exe.bat  config.ini  config.ini.example  copy_task.bat  edit_task.bat  install.bat  main.py  pyproject.toml  remove_with_id.bat  requirements.txt  set_task_interval.bat  shutdown.bat  taskscheduler.bat  taskscheduler_add.bat  taskscheduler_history.bat  taskscheduler_list.bat  taskscheduler_remove_with_id.bat  taskscheduler_rename.bat  taskscheduler_run.bat  taskscheduler_run_with_id.bat  taskscheduler_set_arguments.bat  taskscheduler_set_start_time.bat  update.bat
docs/: BOT_ISSUES.md  bot.md  uv-project-compatibility.md
src/: __init__.py  bot_health.py  cli_input.py  cli_output.py  config.py  constants.py  database.py  formatters.py  ftp_syncer.py  instance_controller.py  interaction.py  logger.py  php_login.py  scheduler.py  script_runner.py  status_page.py
tests/: __init__.py  test_bot_adapters.py  test_bot_command_processor.py  test_bot_config.py  test_bot_constants.py  test_bot_conversation.py  test_bot_formatters.py  test_bot_health.py  test_bot_interaction_handler.py  test_bot_manager.py  test_bot_types.py  test_cli_output.py  test_config.py  test_constants.py  test_database.py  test_formatters.py  test_ftp_syncer.py  test_instance_controller.py  test_interaction.py  test_launch_new_process.py  test_logger.py  test_logger_unicode.py  test_manual_only_tasks.py  test_scheduler_run_task.py  test_script_output.py  test_script_runner.py  (+5 more)
(+29 files in other folders)
