[project]
name = "task-scheduler"
version = "1.0.0"
description = "Windows task scheduler for Python scripts and batch files"
requires-python = ">=3.10"
dependencies = [
    "APScheduler>=3.11.0",
    "prompt_toolkit>=3.0.52",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "wcwidth>=0.2.13",
    "pyftpsync>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=9.0.2",
]
